--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="https://gaming.turquoisetnt.tk/">Gaming</a></li>
+  <li><a href="https://scratch.mit.edu/studios/30653776/">Scratch</a></li>
 </ul>
 
 <h1>‎</h1>
